--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-# Binaries for programs and plugins
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+debug
 
-# Test binary, build with `go test -c`
-*.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+/.idea
+
+npm-debug.log
+
+node_modules/
